# chart-viewer

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  electron-dev.js  eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js
.github/: pull_request_template.md
app/: globals.css  layout.tsx  page.tsx
components/: ChartList.tsx  GlobeViewer.tsx  I18nProvider.tsx  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: georef_script.py
src-tauri/resources/pdf_symbol_matcher/: __init__.py  coordinates.py  debug_render.py  geometry.py  matcher.py  naip.py  raster_match.py  template_builder.py  vectors.py
src-tauri/resources/symbol_library/: library.json  review.html
src-tauri/resources/symbol_library/templates/: fly_by_point_left.json  fly_by_point_middle.json  fly_by_point_right.json  fly_over_point_left.json  fly_over_point_middle.json  fly_over_point_right.json  mandatory_reporting_triangle_blue.json  mandatory_reporting_triangle_large.json  mandatory_reporting_triangle_small.json  position_fix_triangle.json  position_fix_x.json  position_profile_vertical_line.json  required_reporting_triangle_blue.json  required_reporting_triangle_large.json  required_reporting_triangle_small.json  rnav_mandatory_waypoint_blue.json  rnav_mandatory_waypoint_large.json  rnav_mandatory_waypoint_small.json  rnav_required_waypoint_blue.json  rnav_required_waypoint_large.json  rnav_required_waypoint_small.json
src-tauri/src/: lib.rs  main.rs
(+37 files in other folders)
