[package]
name = "chart-viewer"
version = "3.0.1"
description = "Aviation chart viewer application for viewing PDF approach charts"
authors = ["Justin <epa6643@gmail.com>"]
edition = "2021"

[lib]
name = "chart_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
encoding_rs = "0.8"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
